--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="xl:hidden inline-block w-7" src="images/airbnb_logo.svg" alt="">
       </div>
       <div class="relative xl:mx-28 2xl:mx-64">
-        <input class="px-4 py-3 rounded-3xl font-medium placeholder-black text-sm border-solid border-gray-400 border-2 border-opacity-30 focus:outline-none xl:px-6 xl:placeholder-gray-600 xl:text-base" placeholder="Commencez votre recherche">
+        <input class="px-4 py-3 rounded-3xl font-medium placeholder-black text-sm border-solid border-gray-400 border-2 border-opacity-30 focus:outline-none hover:shadow-lg xl:px-6 xl:placeholder-gray-600 xl:text-base" placeholder="Commencez votre recherche">
         <div class="absolute inset-y-0 right-0 flex items-center pr-2">
           <svg class="w-8 fill-current text-red-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
             <path d="M9 9a2 2 0 114 0 2 2 0 01-4 0z" />
@@ -37,7 +37,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
         </svg>
       </div>
-      <button class="flex justify-between items-center px-2 py-1 shadow rounded-3xl border-solid border-gray-400 border-2 border-opacity-30 hover:shadow-xl focus:outline-none">
+      <button class="flex justify-between items-center px-2 py-1 shadow rounded-3xl border-solid border-gray-400 border-2 border-opacity-30 hover:shadow-lg focus:outline-none">
         <div class="px-1">
           <svg class="w-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -77,22 +77,22 @@
 
     <div class="hidden md:flex pt-7 -mr-12">
       <div class="px-1">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Conditions d'annulations flexibles</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85 focus:outline-none focus:border-gray-800 active:border-2 hover:border-gray-700">Conditions d'annulations flexibles</button>
       </div>
       <div class="px-1">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Logement entier</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85 focus:outline-none">Logement entier</button>
       </div>
       <div class="px-1">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Prix</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85 focus:outline-none focus:border-gray-800 focus:border-2 hover:border-gray-700">Prix</button>
       </div>
       <div class="px-1 hidden 2xl:contents">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Réservation instantanée</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85 focus:outline-none focus:border-gray-800 focus:border-2 hover:border-gray-700">Réservation instantanée</button>
       </div>
       <div class="px-1 2xl:hidden">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85">Chambres et lits</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-400 border text-opacity-85 focus:outline-none focus:border-gray-800 focus:border-2 hover:border-gray-700">Chambres et lits</button>
       </div>
       <div class="px-1">
-        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85">Plus de filtres &bull; 1</button>
+        <button class="px-3 py-2 text-sm text-gray-800 rounded-3xl border-solid border-gray-800 border-2 text-opacity-85 focus:outline-none">Plus de filtres &bull; 1</button>
       </div>
     </div>
     <div class="pt-7 -mx-1 md:hidden">
